--- a/runtime/pages/page12_participantSummary.Rmd
+++ b/runtime/pages/page12_participantSummary.Rmd
@@ -4,22 +4,15 @@
 selectizeInput("participantSummary", "participant",
   choices = participants, selected = participants[1], multiple = TRUE)
 actionButton("addAllParticipants", "Add All Participants")
-checkboxInput("filterSummary", "Show filtered data",
-  value = FALSE)
-```
-
-NOTE: REPORT GENERATION BROKEN FOR NOW.
-```{r}
-actionButton("generateReports", "Generate PDF Reports")
-
-downloadButton("downloadAll", "Download All PDFs", style = "display: block; margin-top: 20px; height: 40px; width: 300px;")
-uiOutput("downloadLinks")
 ```
 
 Column
 --------------------------------------------
 
 ### Participant pool
+Get summary of participant demographics etc.
+
+(This was previously a place in which we could generate PDF reports of each participant (see old commits), but this feature required a lot of extra work to keep it running so it was removed.)
 ```{r}
 tableOutput("participant_details_table")
 ```
@@ -37,196 +30,4 @@ output$participant_details_table <- renderTable({
   
   return(participant_details)
 }, rownames = TRUE, options = list(pageLength = 100, scrollY = "500px"))
-
-### PDF making stuff
-get_extraTitle <- function(participant, trialNum){
-  VFD <- get_p_results(participant, "noise_enabled", trialNum)
-  return(paste("Trial number", trialNum, ", VFD =", VFD, ","))
-}
-
-generate_traj_plots <- function(data, participant, trials, axis_to_plot, doFilter, overrideLims = c(), baseSize = 10) {
-  plots <- lapply(trials, function(trialNum) {
-    show_legend <- (trialNum == tail(trials, n = 1))
-    plot_steps_with_overlay(data, participant, trialNum, axis_to_plot, doFilter, show_legend = show_legend, extraTitle = get_extraTitle(participant, trialNum), baseSize = baseSize)
-  })
-  
-  # get proper y lims
-  if (length(overrideLims)==2) {
-    y_limits <- overrideLims # custom override fillin
-  } else {
-    y_limits <- range(unlist(lapply(plots, function(p) p$data[[axis_to_plot]]))) # scale based on range of the data
-  }
-  
-  plots <- lapply(plots, function(p, y_limits) {
-    p + scale_y_continuous(limits = y_limits)
-  }, y_limits = y_limits)
-  
-  # Apply the theming adjustments for x-axis
-  #plots <- lapply(plots, function(p) p + theme(axis.title.x = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank()))
-  #plots[[length(plots)]] <- plots[[length(plots)]] + theme(axis.title.x = element_text(), axis.text.x = element_text(), axis.ticks.x = element_line())
-  
-  return(plots)
-}
-
-generate_pie_charts <- function(data, participant, trials, baseSize = 10) {
-  pies <- lapply(trials, function(trialNum) {
-    show_legend <- (trialNum == tail(trials, n = 1))
-    trial_data <- data[data$participant == participant & data$trialNum == trialNum, ]
-    make_pie_chart(trial_data, get_extraTitle(participant, trialNum), show_legend, baseSize = baseSize)
-  })
-  return(pies)
-}
-
-filteredQResults <- reactive({
-  included <- allQResults[["participant"]] %in% input$filterParticipants
-  included <- included & allQResults[["VFD"]] %in% input$filterVFD
-  included <- included & allQResults[["trialNum"]] %in% input$filterTrials
-  included <- included & allQResults[["startedWithNoise"]] %in% input$filterStartCondition
-  
-  return(allQResults[included, ])
-})
-
-
-generate_questionnaire_plots <- function(questionnaireList, participant, baseSize = 10) {
-  data <- allQResults[allQResults$participant==participant, ] # just use the full (unfiltered) table
-  plots <- lapply(questionnaireList, function(questionnaire) {
-    plot_questionnaire_data(data, questionnaire, baseSize = baseSize)
-  })
-  return(plots)
-}
-
-generate_variability_plots <- function(data, participant, varList, baseSize = 10) {
-  plots <- lapply(varList, function(var) {
-    #plot_boxplots(data, participant, var, baseSize = baseSize)
-  })
-  return(plots)
-}
-
-generate_target_stepping_plot <- function(data, participant, baseSize = 10) {
-  target_data <- data[data$participant == participant, ]
-  make_target_steps_plot(target_data, baseSize = baseSize)
-}
-
-generate_scatter_plot <- function(data, participant, baseSize = 10) {
-  scatter_data <- data[data$participant == participant, ]
-  make_scatter_plot_steps(scatter_data, "VFD", "relHeelStrikes.pos_x", "relHeelStrikes.actual_pos_z", baseSize = baseSize)
-}
-
-generate_2d_plots <- function(data, participant, trials, xtracker, yplot, baseSize = 10, overrideLims = c()) {
-  plots <- lapply(trials, function(trialNum) {
-    plot_2d(xtracker, xtracker, participant, trialNum, 0, 0, "time", yplot, TRUE, FALSE, extraTitle = paste(", Trial number:",trialNum), override_ylims = overrideLims, baseSize = baseSize)
-  })
-  return(plots)
-}
-
-# Reactive values to store the file paths
-pdf_file_paths <- reactiveVal(list())
-zip_file_path <- reactiveVal(NULL)
-
-observeEvent(input$generateReports, {
-  selected_participants <- input$participantSummary
-  doFilter <- input$filterSummary
-  trials <- c(2, 3, 5, 6)
-  baseSize = 8
-  
-  progress <- shiny::Progress$new()
-  progress$set(message = "Generating PDF reports", value = 0)
-  on.exit(progress$close())
-  
-  temp_dir <- tempdir()
-  files <- list()
-  
-  for (i in seq_along(selected_participants)) {
-    participant <- selected_participants[i]
-    progress$inc(1/length(selected_participants), detail = paste("Processing participant:", participant))
-    
-    traj_plots_z <- generate_traj_plots(filteredParams(), participant, trials, axis_to_plot = "pos_z", doFilter, c(-0.6,0.6), baseSize)
-    traj_plots_y <- generate_traj_plots(filteredParams(), participant, trials, axis_to_plot = "pos_y", doFilter, c(0.4,0.7), baseSize)
-    traj_plots_x <- generate_traj_plots(filteredParams(), participant, trials, axis_to_plot = "pos_x", doFilter, c(-0.4,0.4), baseSize)
-    
-    pie_charts <- generate_pie_charts(allGaitParams, participant, trials, baseSize)
-    
-    questionnaireList <- c("VEQ", "SSQ", "IMI")
-    questionnaire_plots <- generate_questionnaire_plots(questionnaireList, participant, baseSize)
-    varList <- c("stepWidths.sd","stepWidths.cv", "stepLengths.cv")
-    variability_plots <- generate_variability_plots(get_mu_dyn_long(), c(participant), varList, baseSize)
-    
-    target_stepping_plot <- generate_target_stepping_plot(filteredTargetParams(), participant, baseSize)
-    
-    scatter_plot <- generate_scatter_plot(filteredParams(), participant, baseSize)
-    # 2D plots
-    disturbance_plots_z_l <- generate_2d_plots(filteredParams(), participant, trials, "leftdisturbance", "offset_z", baseSize)
-    disturbance_plots_x_l <- generate_2d_plots(filteredParams(), participant, trials, "leftdisturbance", "offset_x", baseSize)
-    disturbance_plots_z_r <- generate_2d_plots(filteredParams(), participant, trials, "rightdisturbance", "offset_z", baseSize)
-    disturbance_plots_x_r <- generate_2d_plots(filteredParams(), participant, trials, "rightdisturbance", "offset_x", baseSize)
-    eye_plots_x <- generate_2d_plots(filteredParams(), participant, trials, "eye", "hit_pos_x", baseSize, overrideLims = c(-1, 1))
-    eye_plots_z <- generate_2d_plots(filteredParams(), participant, trials, "eye", "hit_pos_z", baseSize, overrideLims = c(-1, 5))
-    
-    # Create the PDF report for each participant
-    output_file <- file.path(temp_dir, paste0("participant_report_", participant, "_", Sys.Date(), ".pdf"))
-    rmarkdown::render("pages/pdf_report.Rmd", output_file = output_file, params = list(
-      participant = participant,
-      traj_plots_z = traj_plots_z,
-      traj_plots_y = traj_plots_y,
-      traj_plots_x = traj_plots_x,
-      pie_charts = pie_charts,
-      questionnaire_plots = questionnaire_plots,
-      variability_plots = variability_plots,
-      target_stepping_plot = target_stepping_plot,
-      scatter_plot = scatter_plot,
-      disturbance_plots_z_l = disturbance_plots_z_l,
-      disturbance_plots_x_l = disturbance_plots_x_l,
-      disturbance_plots_z_r = disturbance_plots_z_r,
-      disturbance_plots_x_r = disturbance_plots_x_r,
-      eye_plots_x = eye_plots_x,
-      eye_plots_z = eye_plots_z
-    ), envir = new.env(parent = globalenv()))
-    
-    files[[participant]] <- output_file
-  }
-  
-  # Update the reactive value with the new file paths
-  pdf_file_paths(files)
-  
-  # Create a ZIP file containing all PDFs
-  file_paths <- unname(unlist(files))  # Extract file paths from the named list
-  zip_file <- file.path(temp_dir, paste0("all_participant_reports_", Sys.Date(), ".zip"))
-  zip(zipfile = zip_file, files = file_paths)
-  
-  # Store the ZIP file path in the reactive value
-  zip_file_path(zip_file)
-  
-  output$downloadLinks <- renderUI({
-    download_buttons <- lapply(names(files), function(participant) {
-      downloadButton(outputId = paste0("download_", participant), label = paste("Download PDF for participant", participant), style = "display: block; margin-bottom: 10px; height: 40px; width: 300px;")
-    })
-    
-    do.call(tagList, download_buttons)
-  })
-  
-  # Create individual download handlers for each PDF
-  lapply(names(files), function(participant) {
-    local({
-      local_participant <- participant
-      output[[paste0("download_", local_participant)]] <- downloadHandler(
-        filename = function() {
-          paste0("participant_report_", local_participant, "_", Sys.Date(), ".pdf")
-        },
-        content = function(file) {
-          file.copy(pdf_file_paths()[[local_participant]], file)
-        }
-      )
-    })
-  })
-})
-
-# Download handler for the ZIP file
-output$downloadAll <- downloadHandler(
-  filename = function() {
-    paste0("all_participant_reports_", Sys.Date(), ".zip")
-  },
-  content = function(file) {
-    file.copy(zip_file_path(), file)
-  }
-)
 ```
