--- a/runtime/pages/page5_histograms.Rmd
+++ b/runtime/pages/page5_histograms.Rmd
@@ -26,6 +26,7 @@ Column
 --------------------------------------------
 
 ### Histograms  {data-height=1500}
+Create histograms of the step results of the selected data.
 ```{r}
 imageOutput("hist")
 ```
