--- a/runtime/index.Rmd
+++ b/runtime/index.Rmd
@@ -36,8 +36,8 @@ dataTypesTargets  <- setdiff(getTypes(allTargetParams), categories)
 
 ## Summary tables
 source('source/summaryparams.R', local = FALSE)
+#mu_sliced <- get_full_mu_sliced(allGaitParams, allTargetParams, allQResults, categories, 60, avg_feet=FALSE, add_diff = TRUE)
 mu <- get_full_mu(allGaitParams, allTargetParams, allQResults, categories, avg_feet=FALSE, add_diff = TRUE)
-mu_sliced <- get_full_mu_sliced(allGaitParams, allTargetParams, allQResults, categories, 60, avg_feet=FALSE, add_diff = TRUE)
 muDataTypes <- setdiff(getTypes(mu), categories)
 muVars <- colnames(mu)
 ## Plotting code
